version/0.23/_sources/api/solver/_autosummary/settings/create_manually.rst.txt
:orphan:

.. _create_manually:

create_manually
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.create_manually.create_manually
    :show-inheritance:

.. rubric:: Arguments

================================   ===========================================================

Argument                                                                               Summary

================================   ===========================================================
:ref:`name <name_2>`                                  Enter a prefix for mesh interface names.

:ref:`zone_list_1 <zone_list_1>`        Enter the boundary zones belonging to the first group.

:ref:`zone_list_2 <zone_list_2>`       Enter the boundary zones belonging to the second group.

================================   ===========================================================

.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`mesh_interfaces <mesh_interfaces>`       Enter the mesh interfaces menu.

========================================   ===================================

