version/0.28/_sources/api/solver/_autosummary/settings/create_manually.rst.txt
:orphan:

.. _create_manually:

create_manually
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.create_manually
    :show-inheritance:

.. rubric:: Arguments

======================================================   ===========================================================

Argument                                                                                                     Summary

======================================================   ===========================================================
:ref:`name <name_9>`                                                        Enter a prefix for mesh interface names.

:ref:`zone_list_1 <zone_list_1>`                              Enter the boundary zones belonging to the first group.

:ref:`zone_list_2 <zone_list_2>`                             Enter the boundary zones belonging to the second group.

:ref:`matching <matching>`                                                   Indicate if mesh-interface is matching.

:ref:`ignore_area_difference <ignore_area_difference>`        Check if user want to create poorly matched interface.

======================================================   ===========================================================

.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`mesh_interfaces <mesh_interfaces>`       Enter the mesh interfaces menu.

========================================   ===================================

